# server/routes/customer.routes.ts
@@ -1,9 +1,17 @@
 import { Router } from "express";
-import { updateCustomerProfile } from "../controllers/customerController.js";
+import {
+    getCustomerCartController,
+  getCustomerProfile,
+  updateCustomerCartController,
+  updateCustomerProfile,
+} from "../controllers/customerController.js";
 import { verifyToken } from "../middlewares/authMiddleware.js";
 
 const router = Router();
 
-router.patch("/:customerId/profile", verifyToken, updateCustomerProfile);
+router.patch("/profile", verifyToken, updateCustomerProfile);
+router.get("/profile", verifyToken, getCustomerProfile);
+router.get("/cart", verifyToken,getCustomerCartController );
+router.put("/cart", verifyToken,updateCustomerCartController );
 
 export default router;
